--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -13,5 +13,6 @@
         {{object.updated}} <br>
         {{object.id}} <br>
     {% endfor %}
+    <a href="{% url 'posts:create' %}" class="btn btn-primary" role="button">Create</a> 
 </body>
 </html>
