--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Post Detail</title>
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
 </head>
 <body>
 	<h1>The Post {{title}} Page</h1>
@@ -12,5 +15,7 @@
     {{instance.timestamp}} <br>
     {{instance.updated}} <br>
     {{instance.id}} <br>
+
+     <a href="{% url 'posts:list' %}" class="btn btn-primary" role="button">Back</a> 
 </body>
 </html>
