--- a/posts/templates/post_update.html
+++ b/posts/templates/post_update.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Post Create</title>
+    <title>Post Update</title>
 </head>
 <body>
-    <h1>The Post Create Page</h1>
+    <h1>The Post {{title}} Page</h1>
+    <form action="{% url 'posts:update' post_id=instance.id %}" method="POST">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Update Post">
+    </form>
 </body>
 </html>
