--- a/posts/templates/post_create.html
+++ b/posts/templates/post_create.html
@@ -1,20 +1,12 @@
+{% extends "base.html" %}
 
-<!DOCTYPE html>
 
-<html lang="en">
-<head>
-	
-<meta charset="UTF-8">
-    <title>Post Create</title>
-</head>
-<body>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+{% block title %}
+    Create
+{% endblock title %}
+
+
+{% block content %}
 
     <h1>The Post {{title}} Page</h1>
 <form action="{% url 'posts:create' %}" method="POST">
@@ -23,5 +15,4 @@
     <input type="submit" value="Create Post">
 </form>
 
-</body>
-</html>
+{% endblock content %}
