--- a/posts/templates/post_delete.html
+++ b/posts/templates/post_delete.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post Create</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block title %}
+    Delete
+{% endblock title %}
+
+
+{% block content %}
     <h1>The Post Create Page</h1>
-</body>
-</html>
+{% endblock content %}
