--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -1,14 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Post Detail</title>
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-</head>
-<body>
-	<h1>The Post {{title}} Page</h1>
+
+{% block title %}
+    Detail
+{% endblock title %}
+
+
+{% block content %}	<h1>The Post {{title}} Page</h1>
 	
     {{instance.title}} <br>
     {{instance.content}} <br>
@@ -17,5 +15,4 @@
     {{instance.id}} <br>
 
      <a href="{% url 'posts:list' %}" class="btn btn-primary" role="button">Back</a> 
-</body>
-</html>
+{% endblock content %}
