--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post List</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block title %}
+    List
+{% endblock title %}
+
+
+{% block content %}
     <h1>The Post {{title}} Page</h1>
     {% for object in object_list %}
         <a href="{{object.get_absolute_url}}">{{object.title}}</a> <br>
@@ -14,5 +16,4 @@
         {{object.id}} <br>
     {% endfor %}
     <a href="{% url 'posts:create' %}" class="btn btn-primary" role="button">Create</a> 
-</body>
-</html>
+{% endblock content %}
