--- a/posts/templates/post_update.html
+++ b/posts/templates/post_update.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post Update</title>
-</head>
-<body>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+{% extends "base.html" %}
+
+
+{% block title %}
+    Update
+{% endblock title %}
+
+
+{% block content %}
 
     <h1>The Post {{title}} Page</h1>
     <form action="{% url 'posts:update' post_id=instance.id %}" method="POST">
@@ -19,5 +14,4 @@
     {{form.as_p}}
     <input type="submit" value="Update Post">
     </form>
-</body>
-</html>
+{% endblock content %}
