--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -8,6 +8,10 @@
 
     {% endblock title %}
     </title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
 </head>
 <body>
     
@@ -16,5 +20,14 @@
     {% block content %}
 
     {% endblock content %}
+
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+ 
+
+
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
