--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -2,17 +2,18 @@
 
 
 {% block title %}
-    Detail
+{{title}}
 {% endblock title %}
 
 
-{% block content %}	<h1>The Post {{title}} Page</h1>
-	
-    {{instance.title}} <br>
-    {{instance.content}} <br>
-    {{instance.timestamp}} <br>
-    {{instance.updated}} <br>
-    {{instance.id}} <br>
+{% block content %}	
+
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <h1>{{instance.title}} <small>{{instance.timestamp}}</small></h1>
+        {{instance.content| linebreaks}}
+    </div>
+</div>
 
      <a href="{% url 'posts:list' %}" class="btn btn-primary" role="button">Back</a> 
 {% endblock content %}
