--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-
 {% block title %}
 {{title}}
 {% endblock title %}
 
 
 {% block content %}
-    <h1>The Post {{title}} Page</h1>
+    <h1>{{title}}</h1>
+    <div class="row">
     {% for object in object_list %}
-         <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-6 col-sm-offset-3">
             <div class="thumbnail">
                 <!--<img src="..." alt="...">-->
                 <div class="caption">
@@ -19,5 +19,23 @@
                 </div>
             </div>
         </div>
-    <a href="{% url 'posts:create' %}" class="btn btn-primary" role="button">Create</a> 
+
+
+    {% endfor %}
+    </div>
+    <div class="pagination">
+        <span class="step-links">
+            {% if object_list.has_previous %}
+                <a href="?page={{ object_list.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+            </span>
+
+            {% if object_list.has_next %}
+                <a href="?page={{ object_list.next_page_number }}">next</a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock content %}
