--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -11,7 +11,9 @@
     {% for object in object_list %}
         <div class="col-sm-6 col-sm-offset-3">
             <div class="thumbnail">
-                <!--<img src="..." alt="...">-->
+                {% if object.image %}
+                    <img src="{{object.image.url}}" alt="" class="img-responsive">
+                {% endif %}
                 <div class="caption">
                     <h3><a href="{{ object.get_absolute_url }}">{{object.title}}</a><small> {{object.timestamp|timesince }} ago</small></h3>
                     <p>{{object.content|linebreaks|truncatechars:100}}</p>
