--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load urlify %}
 
 {% block title %}
 {{title}}
@@ -15,6 +15,18 @@
     	{% endif %}
         <h1>{{instance.title}} <small>{{instance.timestamp}}</small></h1>
         {{instance.content| linebreaks}}
+
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{request.build_absolute_uri}}">
+        Share on Facebook
+        </a>
+
+        <a href="https://twitter.com/home?status={{share_string}}%20{{request.build_absolute_uri}}">
+	    Share on Twitter
+		</a>
+
+		<a href="https://www.linkedin.com/shareArticle?mini=true&url={{request.build_absolute_uri}}&title={{instance.title|urlify}}&summary={{instance.content|truncatechars:35|urlify}}&source={{request.build_absolute_uri}}">
+		Share on Linkedin
+		</a>
     </div>
 </div>
 
